--- a/src/style.css
+++ b/src/style.css
@@ -81,7 +81,7 @@ body {
   transform: translate(-50%, -50%);
   box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
   padding-left: 0;
-  margin: 25rem 0;
+  
 }
 
 .item {
@@ -96,6 +96,8 @@ body {
 
 .populated-list {
   margin-left: -2.5rem;
+  overflow:auto;
+  height: 20rem;
 }
 
 .clear-all {
